fix: remove redundant > * z-index rule from bottom-overlay

--- a/src/assets/scss/theme/_overlay.scss
+++ b/src/assets/scss/theme/_overlay.scss
@@ -509,10 +509,6 @@ figure.overlay img {
     pointer-events: none;
     z-index: 3;
   }
-  > * {
-    position: relative;
-    z-index: 3;
-  }
   img {
     position: relative;
     z-index: 1;
